--- a/src/Credits.form
+++ b/src/Credits.form
@@ -18,9 +18,11 @@
         <children>
           <component id="2a77c" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <horizontalAlignment value="11"/>
+              <horizontalTextPosition value="11"/>
               <text value="&lt;html&gt;Created by:&lt;br&gt;&#10;Bartosz Wiśniewski&lt;br&gt;&#10;poprosturonin@gmail.com&lt;/html&gt;"/>
             </properties>
           </component>
